@@ -1,3 +1,8 @@
+2012-11-11  Eric Botcazou  <ebotcazou@adacore.com>
+
+	* config/sparc/sparc.h (AS_NIAGARA3_FLAG): Tweak.
+	* config/sparc/sol2.h (TARGET_CPU_niagara4 support): Fix pasto.
+
 2012-11-09  Eric Botcazou  <ebotcazou@adacore.com>
 
 	* doc/install.texi (sparc64-x-solaris2): Mention MPC as well.
